# libsnert

./: .gitattributes  .gitignore  CHANGES.TXT  FILE.TXT  LICENSE.TXT  LICENSE.md  LibSnert.c  MANIFEST.TXT  README.TXT  README.md  TOOLS.TXT  TOOLS.md  VERSION.TXT  aclocal.m4  acsite.m4  configure  configure.ac  configure.in  libsnert.pc.in  makefile.in  mklinks.sh  version.h.in.in  version.sh.in
.github/workflows/: codeql.yml
crc/: Luhn.c  crc12.c  crc16.c  crc32.c  crcccitt.c  crcfn.c  crctable.c  makefile.in
include/: autoconf.h  berkeley_db.h  stdlib.h
include/crc/: Crc.h  Luhn.h
include/io/: Dns.h  Error.h  Log.h  Pushback.h  Socket.h  URI.h  err.h  events.h  file.h  posix.h  socket2.h  socket3.h  socketAddress.h
include/mail/: MailSpan.h  grey.h  limits.h  mf.h  mime.h  parsePath.h  siq.h  smdb-old.h  smdb.h  smf.h  smtp.h  smtp.old.h  smtp2.h  spf.h  tlds.h
include/net/: dnsList.h  http.h  network.h  pdq.h  server.h
include/object/: Object.h
include/pt/: lc-addrlabels.h  lc-switch.h  lc.h  pt-sem.h  pt.h
include/sys/: Mutex.h  Shared.h  Thread.h  Time.h  lockpick.h  pid.h  process.h  pthread.h  sysexits.h  track.h  winService.h
include/type/: Data.h  Decimal.h  Hash.h  Integer.h  Object.h  Text.h  Vector.h  hash2.h  kvm.h  list.h  mcc.h  queue.h  tree.h
include/util/: Base64.h  BigInt.h  Buf.h  Cache.h  DebugMalloc.h  DebugMalloc.h.NONEED  HashTable.h  JavaTime.h  Memory.h  ProcTitle.h  Properties.h  Rotate.h  Text.h  Token.h  b64.h  bs.h  cgi.h  cipher.h  convertDate.h  getopt.h  html.h  ixhash.h  md4.h  md5.h  option.h  playfair.h  setBitWord.h  sqlite3.h  time62.h  timer.h  token_bucket.h  uri.h  victor.h
io/: .gdbinit  Dns-expect.txt  Dns.c  DnsTest.sh  Error.c  Log.c  Pushback.c  events.c  file.c  flock.c  fnext.c  makefile.in  mkpath.c  open-close.awk  smtpe-api.txt  smtpe.c  smtpe_lua_engine.lua  so_reuse_test.c  socket2.c  socket3.c  socket3_tls.c  socketAddress.c  socketAddressIsLocal.c  socketEvent.c  socketTimeoutIO.c  table_dump.lua  utf8.c
mail/: MailSpan.c  digestbl.c  dkim-all-relaxed.txt  dkim-all-simple.txt  dkim-embedded-ws.txt  dkim-gtube-crlf-1.txt  dkim-gtube-crlf-3.txt  dkim-hash.c  dkim-leading-ws-relaxed.txt  dkim-no-crlf.txt  dkim-trailing-ws-nocrlf.txt  grey-test.sh  grey.c  makefile.in  mfReply.c  mime-7bit-crlf.eml  mime-b64-crlf.eml  mime-eicar-test-lf.eml  mime-eicar-test.eml  mime-eicar-test.sh  mime-gtube-crlf.eml  mime-gtube-lf.eml  mime-hello.eml  mime-multi-crlf.eml  mime-multi-nohdr.eml  mime-multi-open-boundary.eml  mime-qp-crlf.eml  mime-test.eml  mime-test.sh  mime.c  parsePath.c  parsePath.expect  sa-two-level-tlds.txt  siq.c  sk.c  sk.sh  smdb-old.c  smdb.0.c  smdb.1.c  smdb.c  (+16 more)
mail/data.iana.org/TLD/: tlds-alpha-by-domain.txt
net/: dnsList-api.txt  dnsList.c  event-dns.txt  findIP.c  formatIP.c  formatIP.txt  getRFC2821DateTime.c  http.c  ipinclient-no.txt  ipinclient-yes.txt  ipinclient.c  isRFC2606.c  isReservedIP.c  isReservedIPv4.c  isReservedIPv6.c  makefile.in  network.c  networkGetMyDetails.c  parseIPv6.c  pdq-api.txt  pdq.c  pdq.txt  reverse.c  server.c  spanHost.c  spanIP.c  spanLocalPart.c
object/: Data2.c  Hashmap.c  Integer2.c  Object2.c  Real.c  makefile.in
scripts/: addpasswd.sh  admin.php  attach.sh  check_myip.sh  csvview.php  getopt2.php  grey-test.sh  log.sh  redirect-stderr-other.sh  semver.sh  smtp-ping.php  smtp-profile-list.txt  smtp-profile.cf  smtp-profile.css  smtp-profile.php  smtp-profile.sh  smtp-profile.txt  whois.php  whois.sh
sys/: Mutex.c  Shared.c  Thread.c  Time.c  TimeStamp.c  daemon.c  free_clear.c  gmtime_r.c  kill.c  lockpick.c  makefile.in  malloc.c  nap.c  pid.c  process.c  pthread.c  pthreadSleep.c  rlimits.c  sleep.c  sys.c  track.c  winService.c
tools/: a.out  ansi.c  basename.c  bitdump.c  cksum.c  clamstream.c  climits.c  cmp.c  collect.sh  comm.c  connect_test.c  counter.c  counter.shtml  dnsd.c  echo.c  echod.c  filed.c  flip.c  fmtjson.c  gettimeofday.c  grouplist.c  here-i-am.c  inplace.c  ixhash.c  ixhash.sh  ixhash.txt  kat.c  logd.c  mail-cycle.sh  mailgroup.c  mailout.tws  makefile.in  mimepart.c  myhostname.c  myip.c  myip.socket  myip@.service  natsort.c  nctee.c  nothing.c  (+38 more)
tools/Digits/broadway-red/: broadway-red.psp  pspbrwse.jbf
type/: Data.c  Decimal.c  Hash.c  Integer.c  Object.c  Text.c  Vector.c  hash2.c  kvm.c  kvmap.c  kvmap.txt  kvmc.c  list.c  makefile.in  mcc.c  names.sq3  names.txt  queue.c  socketmap.txt  test-cache.sq3  tree.c
util/: Base64.c  BigInt.c  Buf.c  Cache.c  DebugMalloc.c  DebugMalloc.c.x  DebugMallocTest.c  JavaTime.c  Memory.c  ProcTitle.c  Properties.c  Rotate.c  TextBackslash.c  TextC.c  TextCat.c  TextCopy.c  TextDelim.c  TextDup.c  TextDupN.c  TextEmpty.c  TextEscape.c  TextFind  TextFind.c  TextFind.txt  TextHash.c  TextInputLine.c  TextInsensitiveCompare.c  TextInsensitiveEndsWith.c  TextInsensitiveStartsWith.c  TextInvert.c  TextJoin.c  TextLower.c  TextMatch.c  TextNull.c  TextReadLine.c  TextReverse.c  TextSensitiveCompare.c  TextSensitiveEndsWith.c  TextSensitiveStartsWith.c  TextSplit.c  (+63 more)
util/json/: arr-size-2  key-ws-colon  obj-arr  obj-basic-1  obj-basic-2  obj-obj  obj-of-empties
util/uri-samples/: clic3.net.txt  google-groups-pending.eml  html-gb2312-b64.eml  html-utf8-qp.eml  html.b64  html.txt  mailto.txt  mb1.txt  message-rfc822.eml  orange.eml  pure-html.eml  qp-long-one-line.eml  qp1.txt  qp2.txt  qp3.txt  qp4.txt  short1.txt  smarttags1.txt  text-iso88591-8b.eml  text-w1252-8b.eml  uri-encoded.txt  uri2.txt
